# itmo-labs

./: README.md
Advanced Java/: README.md
Algorithms and Data Structures/Lab01/: D_QueueLinkedList.java  E_BracketSequence.java  G_QueueMin.java
Algorithms and Data Structures/Lab01_Linear/: A_StackVector.java  B_StackLinkedList.java  C_QueueVector.java  E_BracketSequence.java  F_PostfixNotation.java  G_QueueMin.java  H_Quack.java
Algorithms and Data Structures/Lab02/: AllSortNet.java  D_Garland.java  F_AntiQsort.java  J_BigSegments.java  K_BigSearch.java  N_BuildSortNet.java  O_AlmostSortNet.java  l_Kbest.java
Algorithms and Data Structures/Lab02_Sort/: A_MergeSort.java  AllSortNet.java  B_BinSearch.java  C_KthOrderStatistic.java  D_Garland.java  E_RadixSort.java  G_SortLinear.java  H_InversionsCount.java  I_Supermarket.java  M_CheckSortNet.java  N_BuildSortNet.java
Algorithms and Data Structures/Lab03/: C_Heap.java  D_Parking.java  E_MultipleDsu.java  G_InverseRmq.java  J_Chat.java
Algorithms and Data Structures/Lab03_HeapDsu/: A_IsHeap.java  B_Dsu.java  C_Heap.java  D_Parking.java  E_MultipleDsu.java  G_InverseRmq.java  GraphCut.java  H_BipartiteGraph.java  J_Chat.java
Algorithms and Data Structures/Lab04/: A_MatrixMultiplication.java  H_Permutations.java  J_Hirschberg.java  K_Subpalyndrom.java  O_Bridges.java  Q_Tiles3.java  R_Number.java
Algorithms and Data Structures/Lab04_Dp/: B_LongestIncSub.java  C_OptimalCode.java  D_Knapsack.java  E_Levenshtein.java  F_Templates.java  G_Meetings.java  I_Taxes.java  L_Matching.java  M_Salesman.java  O_Bridges.java  R_Number.java  S_ABCDESequence.java  T_SimplePaths.java
Algorithms and Data Structures/Lab05/: B_AVL.java  C_MoveToFront.java  D_KthMax.java  E_Treap.java  F_Keys.java  G_Sum.java  ImplicitTreap.java
Algorithms and Data Structures/Lab05_Bst/: AB_AVL.java  C_MoveToFront.java  D_KthMax.java  E_Treap.java  F_Keys.java  G_Sum.java  ImplicitTreap.java  Treap.java
Algorithms and Data Structures/Lab06/: C_LinkedMap.java  Set.java
Algorithms and Data Structures/Lab06_Hash/: A_Set.java  B_Map.java  C_LinkedMap.java  D_MultiMap.java  F_HashBreak.java  G_Bunker.java  Map.java  Set.java
Algorithms and Data Structures/Lab07/: C_Rect.cpp  D_Rmq.cpp  F_Matrix.cpp  H_Parking.cpp  S_Dynamic_LCA.cpp  SegmentTree.java
Algorithms and Data Structures/Lab07_Segment/: A_AddSum.cpp  B_Rmq.cpp  E_Rsq.cpp  G_Rmq.cpp  J_Windows.cpp  K_Lca.cpp  M_Lca2.cpp  O_Cheap.cpp  P_Add.cpp  SegmentTree.java
Algorithms and Data Structures/Lab08/: A_TopSort.java  B_Condensation.java  C_ShortestPath.java  D_Game.java  E_HasCycle.java  (+4 more)
Bioinformatics/: AbstractTask.java  Ba10c.java  Ba2b.java  Ba3j.java  Ba5j.java  Ba9d.java
C++/HuffmanCoding/: CMakeLists.txt  constants.h  huffman.cpp  huffman.h  tests.cpp  utility.cpp
C++/HuffmanCoding/buffered_io/: buffered_reader.cpp  buffered_reader.h  buffered_writer.cpp  buffered_writer.h
Functional Programming/hw4/: .stylish-haskell.yaml  README.md  hw4-andrey-star.cabal  stack.yaml
Functional Programming/hw4/benchmark/: GeometryBenchmark.hs  Main.hs  MonteCarloBenchmark.hs
Functional Programming/hw4/src/: Comonad19Task.hs  ConcurrentHashTableTask.hs  FileSystemLensTask.hs  FileSystemTraversalTask.hs  GeometryTask.hs  Grid.hs  MonteCarloTask.hs
Functional Programming/hw4/test/: ConcurrentHashTableSpec.hs  FileSystemLensSpec.hs  FileSystemTraversalSpec.hs  GeometrySpec.hs  MonteCarloSpec.hs
Game Theory/: A_GraphGame.java  C_Grundy.java  D_Karlsson.java  E_Smith.java  F_SnakesArrows.java  G_GreenHackenbush.java  H_RootNim.java  J_Chocolate.java  M_HackenbushHotchpotch.java  N_Saddle.java  R_NashEquilibrium.java  T_Pareto.java
(+869 files in other folders)
